tests/golden/type_errors/generic_constraint_explicit.err
Type error at 5:29: function call: type parameter T must satisfy number, got string
  print numeric<string>("text");
                              ^
